fix: corrigindo z-index do dropdown

--- a/frontend/src/components/Dropdown/dropdown.module.css
+++ b/frontend/src/components/Dropdown/dropdown.module.css
@@ -1,5 +1,6 @@
 .dropdownRoot {
   position: relative;
+  z-index: 10;
 }
 
 .dropdownHead,
